<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lytChar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/nama_karakter"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtChar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lytChar"
            android:layout_marginTop="10dp"
            app:strokeWidth="1dp"
            app:strokeColor="@color/stroke_color"
            android:layout_alignParentEnd="true">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgHero"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:src="@drawable/ic_baseline_account_circle_24"/>
                <TextView
                    android:id="@+id/txtNameChar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Name : "
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:id="@+id/txtHeroPoin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hero : "
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:id="@+id/txtClassPoin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Class : "
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:id="@+id/txtRareItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Item : "
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:id="@+id/txtTotalPoin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Total Poin : "
                    android:layout_marginTop="10dp"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <TextView
            android:id="@+id/lblHero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lytChar"
            android:layout_marginTop="10dp"
            android:text="@string/heroEnum"/>
        <RadioGroup
            android:id="@+id/rgHero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblHero">
            <RadioButton
                android:id="@+id/rbWarrior"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/warrior"
                />
            <RadioButton
                android:id="@+id/rbArcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/archer"
                />
            <RadioButton
                android:id="@+id/rbMage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mage"
                />
        </RadioGroup>
        <TextView
            android:id="@+id/lblClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/classs"
            android:layout_below="@id/rgHero"/>
        <LinearLayout
            android:id="@+id/lytClassRareItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/lblClass"
            >
            <RadioGroup
                android:id="@+id/rgClassWarrior"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                >
                <RadioButton
                    android:id="@+id/rbChampion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/champion"/>
                <RadioButton
                    android:id="@+id/rbPaladin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paladin"/>
            </RadioGroup>
            <RadioGroup
                android:id="@+id/rgClassArcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                >
                <RadioButton
                    android:id="@+id/rbHunter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hunter"/>
                <RadioButton
                    android:id="@+id/rbSniper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sniper"/>
            </RadioGroup>
            <RadioGroup
                android:id="@+id/rgClassMage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                >

                <RadioButton
                    android:id="@+id/rbWizard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wizard"/>
                <RadioButton
                    android:id="@+id/Sorcerer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sorcerer"/>
            </RadioGroup>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/rare_item"/>
            <CheckBox
                android:id="@+id/cbAttack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attack"/>
            <CheckBox
                android:id="@+id/cbDefense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defense"/>
            <CheckBox
                android:id="@+id/cbASPD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aspd"/>
            <CheckBox
                android:id="@+id/cbHP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hp"/>

        </LinearLayout>
        <Button
            android:id="@+id/btnHitung"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lytClassRareItem"
            android:layout_marginTop="10dp"
            android:text="Hitung"/>

    </RelativeLayout>
</ScrollView>